--- a/Example/Main.xaml
+++ b/Example/Main.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mdi="clr-namespace:WPF.MDI;assembly=WPF.MDI"
-    Title="WPF.MDI Example" Height="362" Width="684" WindowState="Maximized">
+    Title="WPF.MDI Example" Height="362" Width="684">
     <DockPanel>
         <mdi:MdiContainer Name="Container" >
             <mdi:MdiContainer.Menu>
